--- a/src/intro.css
+++ b/src/intro.css
@@ -34,16 +34,6 @@
     margin-bottom: 20px;
 }
 
-@media (max-width: 1200px) {
-    .intro h1 {
-        font-size: 48px;
-    }
-
-    .intro p {
-        font-size: 18px;
-    }
-}
-
 @media (max-width: 800px) {
     .intro-bg {
         background: var(--cor-11);
@@ -61,7 +51,11 @@
     }
 
     .intro h1 {
-        font-size: 32px;
         margin-bottom: 16px;
+    }
+
+    .intro img {
+        height: 300px;
+        width: 100%;
     }
 }
